--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,10 @@ qt_add_qml_module(appcis476_app
     VERSION 1.0
     QML_FILES
         Main.qml
+        LoginPage.qml
 
-        QML_FILES LoginPage.qml
+    SOURCES
+        login.h
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
