--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -44,6 +44,7 @@ qt_add_qml_module(appcis476_app
         SOURCES notificationObservers.h
         SOURCES notificationObservers.cpp
         SOURCES copyhandler.h
+        QML_FILES EditCreditCard.qml
 )
 
 # Qt for iOS sets MACOSX_BUNDLE_GUI_IDENTIFIER automatically since Qt 6.1.
